# certis.api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 07660360fb69_add_invitation_model.py  1f8282c9afbb_phase_0_canonical_models.py  2bd4e19b1b66_rbac_auth_models.py  3340ae9bbdc1_add_tenant_llm_config.py  673c250dfd3e_resize_embedding_column_768_to_1536.py  7117eec8d379_update_spec_versions_add_authoritative_.py  78ab203fa081_add_risk_analysis_versions_table.py  78eb7b9a1f48_add_clients_documents_chunks.py  7edb7006f903_add_claims_edited_to_auditeventtype_enum.py  875678a53be5_initial_schema.py  96cb835f696b_add_matter_display_fields.py  a3f1c8d92e47_add_fts_to_document_chunks.py  af6657e265aa_add_spec_version_id_to_risk_analysis_.py  c4a8f2e71d93_add_qa_report_versions_table.py  d5a2f3e81b94_add_audit_events_table.py  e1e3b25fcab0_add_matter_jurisdictions_table.py
scripts/: reembed_chunks.py
src/: config.py  database.py  main.py
src/agents/: __init__.py  base.py  state.py
src/artifacts/: models.py
src/audit/: models.py  router.py  schemas.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
src/briefing/: agent.py  router.py  service.py  vision.py
src/chat/: router.py  schemas.py  service.py
src/clients/: models.py  router.py  schemas.py  service.py
src/documents/: models.py  router.py  schemas.py  (+1 more)
tests/: conftest.py  test_auth.py  test_briefing.py  test_invitation_flow.py  test_llm_providers.py  test_rag_agents.py  test_rbac.py
(+53 files in other folders)
