[project]
name = "certis-backend"
version = "0.1.0"
description = "Certis Patent Drafting Intelligence Backend"
authors = [
    {name = "Certis Team", email = "dev@certis.ai"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "langchain>=1.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=1.0.0",
    "langchain-ollama>=0.0.1",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
    "email-validator>=2.1.1",
    "sse-starlette>=2.0.0",
    "python-docx>=1.2.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


